# cdl_funding_scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE_CODE  LICENSE_DATA  README.md  dlt_config.toml  hello.py  index.html  index.ipynb  load_example.py  main.py  pyproject.toml  readme.md  requirements.txt  restore_backup.sh  scraping_pipeline.py  scrapy_settings.py
.dlt/: .sources  config.toml
.github/workflows/: update_notebook.yml
config/: settings.py
data/cache/: readme.md
funding_crawler/: helpers.py  models.py  scrapy_utils.py  spider.py  viz.py
funding_crawler/dlt_utils/: __init__.py  helpers.py  runner.py
funding_crawler/funding_crawler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logs/: readme.md
queries/: fix_dupliates.sql
src/: cache.py  crawler.py  exporter.py  parser.py  settings.py  spider.py  utils.py
tests/: detail_single_desc.html  test_formatting.py  test_get_count.py  test_not_deleted.py  test_spider.py  test_sql_queries.py
tests/test_dlt/: test_pipeline.py  test_pipeline_replace.py  test_pipeline_scd2_query.py
tests/test_scrapy/: detail_fail_07_25.html  detail_fail_19_12.html  detail_multi_desc.html  detail_rechts_only.html  details_single_desc_alt.html  overview.html  test_spider.py
