[project]
name = "funding-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "dlt[duckdb,filesystem,parquet]>=1.4.0",
    "scrapy>=2.12.0",
    "funding_crawler",
    "pydantic>=2.10.2",
    "polars>=1.15.0",
    "boto3>=1.35.36",
]


[tool.uv.sources]
funding_crawler = { path = "funding_crawler" }

