[project]
name = "funding-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=5.3.0",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "dlt[duckdb,postgres]==1.5.0",
    "scrapy>=2.12.0",
    "pydantic>=2.10.2",
    "polars>=1.15.0",
    "boto3>=1.35.36",
    "sqlalchemy>=2.0.36",
    "modal==1.0.3",
    "pyarrow>=18.1.0",
    "seaborn>=0.13.2",
    "jupyter>=1.1.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
funding_crawler = { path = "funding_crawler" }

